--- a/nodebootstrap/views/layout.jade
+++ b/nodebootstrap/views/layout.jade
@@ -10,5 +10,6 @@ html
     script(src='/backbone/backbone-min.js')
     script(src='/javascripts/mongooseStuff.js')
     script(src='/javascripts/APIrequest.js')
+    script(src='/javascripts/graph.js')
   body
     block content
