ready for db test

--- a/nodebootstrap/views/about.jade
+++ b/nodebootstrap/views/about.jade
@@ -3,7 +3,7 @@ extends index
 block rightText
   h1(align="center") All of the Facts, None of the Bullshit
   p 
-       | UnBiasMe is a webapp that lets you read up on recent news stories while providing accurate information regarding the bias/spin of the article. UnBiasMe takes the guesswork out of interpreting how slanted the article is, and allows you to find articles that portray the news as factually and dryly as possible.
+       | UnBiasMe is a webapp that lets you read up on recent news stories while providing accurate inforamtion regarding the bias/spin of the article. UnBiasMe takes the guesswork out of interpreting how slanted the article is, and allows you to find articles that portray the news as factually and dryly as possible.
   p
        | Click an article on the left to start.
 
