ajax post and db query working

--- a/nodebootstrap/views/about.jade
+++ b/nodebootstrap/views/about.jade
@@ -8,11 +8,13 @@ block rightText
        | Click an article on the left to start.
 
 
-   form(name="getUrl", align="center", method="post", action="/", onsubmit="return linkRequest();")
-    key URL
-      input(type="text", name="urlin", id="1")
 
-    input(type="submit", value="Submit")
+
+  form(name="temp",  id="id2",method="post", action="/", onsubmit="return linkRequest();")
+     key asdasd
+      input(type="text", name="aaa", id = "666")
+      input(type="submit", value="temp")
+
 
 
 
