--- a/nodebootstrap/views/about.jade
+++ b/nodebootstrap/views/about.jade
@@ -10,12 +10,12 @@ block rightText
 
 
 
-  form(name="temp",  id="id2",method="post", action="/", onsubmit="return linkRequest();")
-     key asdasd
-      input(type="text", name="aaa", id = "666")
-      input(type="submit", value="temp")
+  form(name="urlInForm", method="post", action="#", onsubmit="return linkRequest();")
+     key Enter Article URL
+      input(type="text", id = "urlIn")
+      input(type="submit", value="Submit")
 
 
-
+  #graph
 
 
