--- a/nodebootstrap/views/layout.jade
+++ b/nodebootstrap/views/layout.jade
@@ -8,8 +8,7 @@ html
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.js')
     script(src='/backbone/backbone-min.js')
-    script(src='/javascripts/mongooseStuff.js')
-    script(src='/javascripts/APIrequest.js')
     script(src='/javascripts/graph.js')
+    script(src='http://d3js.org/d3.v3.min.js')
   body
     block content
