added tooltip/info on hover

--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -34,8 +34,6 @@ body {
 }
 
 
-
-
 #graph {
   font: 10px sans-serif;
 }
@@ -49,6 +47,19 @@ body {
 
 .dot {
   stroke: #000;
+  stroke-opacity: 0.3;
+}
+.dot:hover{
+  stroke-opacity: 1;
+  opacity: 0;
 }
 
 
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
