--- a/nodebootstrap/views/about.jade
+++ b/nodebootstrap/views/about.jade
@@ -16,6 +16,7 @@ block rightText
       input(type="text", id = "urlIn")
       input(type="submit", value="Submit")
 
+  #tooltip.hidden
 
   #graph
 
