--- a/nodebootstrap/views/layout.jade
+++ b/nodebootstrap/views/layout.jade
@@ -9,6 +9,7 @@ html
     script(src='/bootstrap/js/bootstrap.js')
     script(src='/backbone/backbone-min.js')
     script(src='/javascripts/graph.js')
+    script(src='/javascripts/tip.js')
     script(src='http://d3js.org/d3.v3.min.js')
   body
     block content
