--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -43,15 +43,21 @@ body {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
+  padding: 10px
+
 }
 
 .dot {
+  opacity: .7;
   stroke: #000;
-  stroke-opacity: 0.3;
+  stroke-opacity: .7;
+  stroke-width: 1px;
 }
 .dot:hover{
+  stroke-width: 3px;
   stroke-opacity: 1;
-  opacity: 0;
+  opacity: 1;
+  z-index: 1;
 }
 
 
@@ -62,4 +68,10 @@ body {
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   border-radius: 2px;
+}
+
+.label {
+
+    padding-bottom: 10px;
+    font-size: 20px;
 }
