--- a/nodebootstrap/views/index.jade
+++ b/nodebootstrap/views/index.jade
@@ -1,24 +1,6 @@
 extends navbar
 
 block mainpart
-  div(id="panelLeft").panel
-    ul.nav.nav-pills.red
-      li(id="tile").active
-        a(href="#")
-          h4 Title
-          h5 Source
-          p Bias
-    ul.nav.nav-pills
-      li(id="tile").active
-        a(href="#")
-          h4 Title2
-          h5 Source2
-          p Bias2
-    ul.nav.nav-pills
-      li(id="tile").active
-        a(href="#")
-          h4 Title2
-          h5 Source2
-          p Bias2
+  div(id="topBar")
   div(id="panelRight").panel
     block rightText
