--- a/nodebootstrap/public/bootstrap/css/bootstrap.css
+++ b/nodebootstrap/public/bootstrap/css/bootstrap.css
@@ -5231,16 +5231,19 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: #62b0ff;
 }
 
 .jumbotron h1 {
   line-height: 1;
-  color: inherit;
+  color: white;
+  text-shadow: black 4px 4px 4px;
 }
 
 .jumbotron p {
   line-height: 1.4;
+  color: white;
+  text-shadow: black 1px 1px 1px;
 }
 
 .container .jumbotron {
