--- a/nodebootstrap/public/bootstrap/css/bootstrap.css
+++ b/nodebootstrap/public/bootstrap/css/bootstrap.css
@@ -5238,19 +5238,19 @@ a.list-group-item.active > .badge,
 .jumbotron h1 {
   line-height: 1;
   color: white;
-//  text-shadow: black 2px 2px 2px;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .jumbotron p {
   line-height: 1.4;
   color: white;
-//  text-shadow: black 1px 1px 1px;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .jumbotron b {
   line-height: 1;
   color: white;
-  text-shadow: black 2px 2px 2px;
+  text-shadow: black 2px 2px 2px 2px;
 
 }
 .container .jumbotron {
