not even gonna bother

--- a/nodebootstrap/public/bootstrap/css/bootstrap.css
+++ b/nodebootstrap/public/bootstrap/css/bootstrap.css
@@ -809,8 +809,8 @@ pre code {
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  //margin-right: -15px;
+  //margin-left: -15px;
   margin : 0px auto;
 }
 
