--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -1,10 +1,13 @@
 #dataBlocks{
+  border-style: solid;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
 
 }
 
+#graph{
+}
 
 .axis path,
 .axis line {
