--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -1,12 +1,26 @@
-#dataBlocks{
+#allDataBlocks{
   border-style: solid;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
+}
 
+.dataBlock{
+  background-color: #131413;
+  height: 120px;
+  width: 120px;
+    margin-bottom: 10px;
 }
 
 #graph{
+}
+
+#header{
+  color:#123456;
+  height: 100px;
+}
+#header h2 ,b{
+  color:#9d1f0f;
 }
 
 .axis path,
@@ -46,3 +60,4 @@
     padding-bottom: 10px;
     font-size: 20px;
 }
+
