about page stylin

--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -77,3 +77,15 @@
   background-color: #9d1f0f;
   height: 25px;
 }
+
+.jumbotronAbout {
+  height: 200px;
+  margin-bottom: 30px;
+  font-size: 21px;
+  font-weight: 200;
+  line-height: 2.1428571435;
+  color: inherit;
+  background-color:#131413 ;
+
+}
+
