about.html page updates

--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -87,7 +87,7 @@
   font-size: 21px;
   font-weight: 200;
   line-height: 2.1428571435;
-  color: inherit;
+  color: #fff;
   background-color:#131413 ;
 
 }
