--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -15,8 +15,17 @@ html, body {height: 100%;}
   margin-bottom: 10px;
 }
 
+#graphContainer{
+  width:900px;
+}
+
 #graph{
   height: 300px;
+  width: 900px;
+}
+
+#graphTitle{
+  font-size: 20px;
 }
 
 #header{
@@ -26,6 +35,11 @@ html, body {height: 100%;}
 }
 #header h2 ,b{
   color:#9d1f0f;
+}
+
+#filterDiv{
+  float:right;
+  margin-right: 40px;
 }
 
 .logo{
