--- a/nodebootstrap/public/bootstrap/css/bootstrap.css
+++ b/nodebootstrap/public/bootstrap/css/bootstrap.css
@@ -5683,6 +5683,16 @@ a.list-group-item.active:focus .list-group-item-text {
   line-height: 1.3;
 }
 
+.box-panel {
+  margin-bottom: 5px;
+  height: 260px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+
+}
 .panel {
   margin-bottom: 20px;
   background-color: #ffffff;
