--- a/nodebootstrap/public/bootstrap/css/bootstrap.css
+++ b/nodebootstrap/public/bootstrap/css/bootstrap.css
@@ -2251,6 +2251,47 @@ textarea.input-lg {
     text-align: right;
   }
 }
+.aboutbtn {
+  color: #000;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.428571429;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #ddd;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+       -o-user-select: none;
+          user-select: none;
+}
+
+.aboutbtn:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+.aboutbtn:hover,
+.aboutbtn:focus {
+  color: #fff;
+  text-decoration: none;
+}
+
+.aboutbtn:active,
+.btn.active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+          box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
 
 .btn {
   display: inline-block;
