--- a/nodebootstrap/public/stylesheets/style.css
+++ b/nodebootstrap/public/stylesheets/style.css
@@ -6,10 +6,14 @@ html, body {height: 100%;}
   height: 600px;
 }
 
+
+
 .dataBlock{
+
 }
 
 .dataRow{
+    margin: 0 auto;
   color: #131413;
   height: 260px;
   width: 900px;
@@ -51,9 +55,9 @@ html, body {height: 100%;}
   margin-bottom: 50px;
 }
 
-#activeItemContainer{
+.activeItemContainer{
 
-    height: 240px;
+    height: 235px;
 }
 
 #homeCarousel{
@@ -69,6 +73,7 @@ html, body {height: 100%;}
 
 #graphContainer{
   width:900px;
+  min-width:900px;
 
 }
 
@@ -101,9 +106,20 @@ html, body {height: 100%;}
 }
 
 .logo{
+  z-index: 2; /* shows tail of "y"*/
+  color: #9d1f0f;
+  font-size: 60px;
   float: left;
   margin-right: 7px;
   height: 100%;
+}
+
+
+.center{
+  display:block;
+  margin: 0 auto;
+  padding: 0;
+
 }
 
 div.logo {
@@ -142,7 +158,7 @@ div.logo a{
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
-  padding: 10px
+  padding: 10px;
 
 }
 
@@ -183,10 +199,18 @@ div.logo a{
   margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
 }
 .footer, .push {
+  padding-top: 30px;
   color: #ccc;
   min-width: 900px;
   background: #131413;
   height: 150px; /* .push must be the same height as .footer */
+}
+
+.footer h4{
+  width: 420px;
+  display:block;
+  margin: 0 auto;
+
 }
 
 .redbar{
@@ -206,6 +230,42 @@ div.logo a{
 }
 
 .carousel-button {
-    max-width:400px;
+
+    max-width:200px;
+}
+
+#urlFormContainer{
+
+  width: 400px;
+  margin: 0 auto;
+
+}
+
+.slidebtn{
+
+  padding-top: 5px;
+  height: 40px;
+
+
+}
+
+#footerbtn{
+  display:block;
+  margin: 0 auto;
+  width: 300px;
+
+}
+
+#trendLeft{
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+#trendRight{
+
+  float: left;
+  width: 50%;
+  height: 100%;
 }
 
